[gd_scene load_steps=10 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Level/tileset_seasons.tres" type="TileSet" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objective/Objective.tscn" type="PackedScene" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 1000, 50, 1 )
flag_disable_z = true
gravity = Vector3( 0, 500, 0 )
angular_velocity = -41.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = ExtResource( 2 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1000, 50, 1 )
flag_disable_z = true
gravity = Vector3( 0, 500, 0 )
angular_velocity = -41.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = ExtResource( 2 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 50, 800, 1 )
flag_disable_z = true
gravity = Vector3( 0, 150, 0 )
angular_velocity = -41.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color = Color( 0.619608, 0.372549, 0.243137, 1 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -524297, 12, 0, -524296, 11, 0, -524295, 9, 0, -524294, 10, 0, -524293, 9, 0, -524292, 10, 0, -524291, 9, 0, -524290, 23, 0, -524289, 22, 0, -589824, 21, 0, -589823, 20, 0, -589822, 10, 0, -589821, 9, 0, -589820, 10, 0, -589819, 9, 0, -589818, 10, 0, -589817, 9, 0, -589816, 8, 0, -458761, 13, 0, -458754, 32, 0, -458753, 32, 0, -524288, 32, 0, -524283, 32, 0, -524282, 32, 0, -524280, 7, 0, -393225, 14, 0, -393218, 32, 0, -393217, 32, 0, -458752, 32, 0, -458747, 32, 0, -458744, 5, 0, -327689, 13, 0, -327688, 32, 0, -393213, 32, 0, -393208, 6, 0, -262153, 14, 0, -262152, 32, 0, -262149, 32, 0, -262148, 32, 0, -327678, 32, 0, -327677, 32, 0, -327672, 5, 0, -196617, 13, 0, -196616, 32, 0, -196611, 32, 0, -196610, 32, 0, -196609, 32, 0, -262140, 32, 0, -262136, 6, 0, -131081, 14, 0, -131080, 32, 0, -131074, 32, 0, -196604, 32, 0, -196603, 32, 0, -196600, 5, 0, -65545, 24, 0, -65538, 32, 0, -131069, 32, 0, -131068, 32, 0, -131064, 31, 0, -9, 25, 0, -2, 32, 0, -65533, 32, 0, -65528, 30, 0, 65527, 26, 0, 65534, 32, 0, 3, 32, 0, 8, 29, 0, 131063, 27, 0, 131068, 32, 0, 131069, 32, 0, 131070, 32, 0, 65539, 32, 0, 65544, 28, 0, 196599, 13, 0, 196601, 32, 0, 196602, 32, 0, 196603, 32, 0, 131080, 6, 0, 262135, 14, 0, 196616, 5, 0, 327671, 13, 0, 262152, 6, 0, 393207, 14, 0, 393208, 32, 0, 327687, 32, 0, 327688, 5, 0, 458743, 13, 0, 393222, 32, 0, 393223, 32, 0, 393224, 6, 0, 524279, 15, 0, 458757, 32, 0, 458758, 32, 0, 458759, 32, 0, 458760, 5, 0, 589815, 0, 0, 589816, 1, 0, 589817, 2, 0, 589818, 1, 0, 589819, 2, 0, 589820, 1, 0, 589821, 2, 0, 589822, 16, 0, 589823, 17, 0, 524288, 18, 0, 524289, 19, 0, 524290, 1, 0, 524291, 2, 0, 524292, 1, 0, 524293, 2, 0, 524294, 1, 0, 524295, 3, 0, 524296, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -956.858, 903.927 )
jump_speed = 810

[node name="Tween" type="Tween" parent="."]

>>>>>>> tileset
[node name="particles" type="Node" parent="."]

[node name="ParticlesTop" type="Particles2D" parent="particles"]
position = Vector2( -0.343262, -1086.93 )
amount = 500
lifetime = 5.0
visibility_rect = Rect2( -1000, 0, 2000, 2000 )
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="ParticlesBottom" type="Particles2D" parent="particles"]
position = Vector2( -0.704712, 1087.89 )
amount = 500
lifetime = 5.0
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="ParticlesLeft" type="Particles2D" parent="particles"]
position = Vector2( -1088.34, 1.35193 )
emitting = false
amount = 500
lifetime = 5.0
process_material = SubResource( 3 )

[node name="ParticlesRight" type="Particles2D" parent="particles"]
position = Vector2( 1089.27, 1.40375 )
emitting = false
amount = 500
lifetime = 5.0
process_material = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -524297, 14, 0, -524296, 13, 0, -524295, 11, 0, -524294, 12, 0, -524293, 11, 0, -524292, 12, 0, -524291, 11, 0, -524290, 12, 0, -524289, 11, 0, -589824, 12, 0, -589823, 11, 0, -589822, 12, 0, -589821, 11, 0, -589820, 12, 0, -589819, 11, 0, -589818, 12, 0, -589817, 11, 0, -589816, 10, 0, -458761, 7, 0, -524286, 0, 0, -524280, 17, 0, -393225, 8, 0, -393220, 0, 0, -458744, 15, 0, -327689, 7, 0, -327682, 0, 0, -327681, 0, 0, -393212, 0, 0, -393208, 16, 0, -262153, 8, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262145, 0, 0, -327672, 15, 0, -196617, 7, 0, -196609, 0, 0, -262136, 16, 0, -131081, 8, 0, -131080, 0, 0, -196603, 0, 0, -196600, 15, 0, -65545, 7, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -131067, 0, 0, -131064, 16, 0, -9, 8, 0, -1, 0, 0, -65528, 15, 0, 65527, 7, 0, 65528, 0, 0, 65535, 0, 0, 7, 0, 0, 8, 16, 0, 131063, 8, 0, 131065, 0, 0, 131066, 0, 0, 131070, 0, 0, 65544, 15, 0, 196599, 7, 0, 196606, 0, 0, 131073, 0, 0, 131080, 16, 0, 262135, 8, 0, 262139, 0, 0, 196609, 0, 0, 196616, 15, 0, 327671, 7, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327677, 0, 0, 262152, 16, 0, 393207, 8, 0, 393208, 0, 0, 327687, 0, 0, 327688, 15, 0, 458743, 7, 0, 393222, 0, 0, 393223, 0, 0, 393224, 16, 0, 524279, 9, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 15, 0, 589815, 2, 0, 589816, 3, 0, 589817, 4, 0, 589818, 3, 0, 589819, 4, 0, 589820, 3, 0, 589821, 4, 0, 589822, 3, 0, 589823, 4, 0, 524288, 3, 0, 524289, 4, 0, 524290, 3, 0, 524291, 4, 0, 524292, 3, 0, 524293, 4, 0, 524294, 3, 0, 524295, 5, 0, 524296, 6, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -956.858, 903.927 )
jump_speed = 810

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ObjectiveSpring" parent="." instance=ExtResource( 6 )]
position = Vector2( -320, 960 )

[node name="ObjectiveSummer" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 448 )
rotation = -1.5708
type = 1

[node name="ObjectiveFall" parent="." instance=ExtResource( 6 )]
position = Vector2( -64, -320 )
rotation = 3.14159
type = 2

[node name="ObjectiveWinter" parent="." instance=ExtResource( 6 )]
position = Vector2( -832, -320 )
rotation = 1.5708
type = 3
[connection signal="stomped" from="Player" to="." method="_on_Player_stomped"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ObjectiveSpring" to="." method="_on_ObjectiveSpring_body_entered"]
[connection signal="body_entered" from="ObjectiveSummer" to="." method="_on_ObjectiveSummer_body_entered"]
[connection signal="body_entered" from="ObjectiveFall" to="." method="_on_ObjectiveFall_body_entered"]
[connection signal="body_entered" from="ObjectiveWinter" to="." method="_on_ObjectiveWinter_body_entered"]
